--- a/src/main/resources/static/templates/userSingUp.html
+++ b/src/main/resources/static/templates/userSingUp.html
@@ -1,4 +1,4 @@
-<div class="container" ng-controller="Controller as vm">
+<div class="container">
 <div class="well"><p>Users are: </p><p>{{vm.users}}</p><p>{{vm.userName}}</p></div>
 	<form class="form-create-user" ng-submit="vm.setUser(vm.userName,vm.password);">
         <h2 class="form-create-user-heading">Create user</h2>
