--- a/src/main/resources/static/templates/userLogin.html
+++ b/src/main/resources/static/templates/userLogin.html
@@ -1,10 +1,10 @@
-<div class="container" ng-controller="Controller as vm">
-<div class="well"><p>{{vm.userName}}</p><p>{{vm.password}}</p><p></p></div>
-		<form class="form-signin" ng-submit="vm.logIn(vm.userName, vm.password)">
+<div class="container" ng-controller="testCtrl as vm">
+<div class="well"><p>Users are: </p><p>{{vm.users | filter:'Carlos'}}</p><p>{{vm.userName}}</p><p>{{vm.check}}</p></div>
+		<form class="form-signin" ng-submit="">
 	        <h2 class="form-signin-heading">Please log in</h2>
 	        <label for="inputUser" class="sr-only">UserName</label>
 	        <input ng-model="vm.userName" type="text" id="inputUser" class="form-control" placeholder="User Name" required="" autofocus="">
-	        <label for="inputPassword" class="sr-only" ng-model="">Password</label>
+	        <label for="inputPassword" class="sr-only">Password</label>
 	        <input ng-model="vm.password" type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
 	        <div class="checkbox">
 	          <label>
