--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -47,3 +47,7 @@ body {
 .textureBack { 
 	background-image: url(http://www.webtexture.net/wp-content/gallery/20-seamless-paper-texture/papar_texture_thumb04.jpg);
 }
+
+.errorStyle {
+  color:red;
+}
