--- a/src/main/resources/static/templates/userLogin.html
+++ b/src/main/resources/static/templates/userLogin.html
@@ -1,18 +1,21 @@
-<div class="container" ng-controller="testCtrl as vm">
-<div class="well"><p>Users are: </p><p>{{vm.users | filter:'Carlos'}}</p><p>{{vm.userName}}</p><p>{{vm.check}}</p></div>
-		<form class="form-signin" ng-submit="">
-	        <h2 class="form-signin-heading">Please log in</h2>
-	        <label for="inputUser" class="sr-only">UserName</label>
-	        <input ng-model="vm.userName" type="text" id="inputUser" class="form-control" placeholder="User Name" required="" autofocus="">
-	        <label for="inputPassword" class="sr-only">Password</label>
-	        <input ng-model="vm.password" type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
-	        <div class="checkbox">
-	          <label>
-	            <input type="checkbox" value="remember-me"> Remember me
-	          </label>
-	        </div>
-	        <div >
-	        <button ng-disabled="form.$invalid" class="btn btn-lg btn-primary btn-block" type="submit">Log in</button>
-	        </div>
-	      </form>
-	</div>
+<div class="container">
+<div class="well"><p>Users are: </p><p>{{vm.users}}</p><p>{{vm.userName}}</p><p>{{vm.check}}</p></div>
+	<form class="form-signin" name="myForm" ng-submit="vm.setUserShared(vm.userName, vm.password);rt.go('/afterLogin/' + vm.userName)" ng-controller="RouteCtrl as rt">
+        <h2 class="form-signin-heading">Please log in</h2>
+
+        <label for="inputUser" class="sr-only">UserName</label>
+        <input ng-model="vm.userName" type="text" name="user" id="inputUser" class="form-control" placeholder="User Name" required="" autofocus="">
+        <span class="alert-danger" ng-show="myForm.user.$dirty && myForm.user.$invalid">
+		<span ng-show="myForm.user.$error.required"><span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span> Username is required.</span>
+		</span>
+
+        <label for="inputPassword" class="sr-only" >Password</label>
+        <input name="password" ng-model="vm.password" type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
+        <span class="alert-danger" role="alert" ng-show="myForm.password.$dirty && myForm.password.$invalid">
+		<span ng-show="myForm.password.$error.required"><span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span> Password is required.</span>
+		</span>
+
+        <button class="btn btn-lg btn-primary btn-block" type="submit" value="Submit User" ng-value="myForm.user.$valid && myForm.password.$valid">Log in {{vm.userName}}</button>
+        </div>
+      </form>
+</div>
