--- a/src/main/resources/static/templates/userSingUp.html
+++ b/src/main/resources/static/templates/userSingUp.html
@@ -1,12 +1,21 @@
-<div class="container">
+<div class="container jumbotron">
 <div class="well"><p>Users are: </p><p>{{vm.users}}</p><p>{{vm.userName}}</p></div>
-	<form class="form-create-user" ng-submit="vm.setUser(vm.userName,vm.password);">
+	<form class="form-create-user" ng-controller="RouteCtrl as rt" ng-submit="vm.setUserShared(vm.userName, vm.password);rt.go('/afterSignUp/' + vm.userName)" name="myForm">
         <h2 class="form-create-user-heading">Create user</h2>
+
         <label for="inputUser" class="sr-only">UserName</label>
-        <input ng-model="vm.userName" type="text" id="inputUser" class="form-control" placeholder="User Name" required="" autofocus="">
-        <label for="inputPassword" class="sr-only">Password</label>
-        <input ng-model="vm.password" type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
+        <input ng-model="vm.userName" type="text" name="user" id="inputUser" class="form-control" placeholder="User Name" required="" autofocus="">
+        <span class="alert-danger" ng-show="myForm.user.$dirty && myForm.user.$invalid">
+		<span ng-show="myForm.user.$error.required"><span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span> Username is required.</span>
+		</span>
+
+        <label for="inputPassword" class="sr-only" >Password</label>
+        <input name="password" ng-model="vm.password" type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
+        <span class="alert-danger" role="alert" ng-show="myForm.password.$dirty && myForm.password.$invalid">
+		<span ng-show="myForm.password.$error.required"><span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span> Password is required.</span>
+		</span>
         
-        <button  class="btn btn-lg btn-primary btn-block" type="submit" value"Submit User">Create User</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit" value="Submit User" ng-value="myForm.user.$valid && myForm.password.$valid" >Create User</button>
       </form>
+
 </div>
