--- a/src/main/resources/static/templates/afterLogin.html
+++ b/src/main/resources/static/templates/afterLogin.html
@@ -1,8 +1,3 @@
 <div ng-controller="RouteCtrl as rt">
-	<div ng-if="vm.equals(vm.user.password, vm.userShared.password)" >
-		{{rt.go('/userMain')}}
-	</div>
-	<div ng-if="!vm.equals(vm.user.password, vm.userShared.password)">
-		{{rt.go('/loginError')}}
-	</div>
+	{{vm.checkLogIn()}}
 </div>
