Final version to defend!!

--- a/src/main/resources/static/templates/exploration.html
+++ b/src/main/resources/static/templates/exploration.html
@@ -1,3 +1,10 @@
-<div class="well">
+<div class="jumbotron">
 	<h1>Exploration</h1>
+	<h4>Here, you can go and live the adventure of your life. Who knows what kind of misteries are awaiting for you?</h4>
+
+	<modal-directive></modal-directive>
+
+	    <h3 ng-model="vm.showEventResult" ng-show="vm.showEventResult" class="alert alert-info">{{vm.showEventResult}}<h3>
+
+	    <p>The gold is: {{vm.gold}} <span class="glyphicon glyphicon-ruble" aria-hidden="true"></p>
 </div>
