--- a/src/main/resources/static/templates/howToPlay.html
+++ b/src/main/resources/static/templates/howToPlay.html
@@ -1,14 +1,14 @@
 <div class="container">
 	<!-- Intro -->
 	<div class="row well">
-		<h1>How to Play Adventure Web</h1>
+		<h1><span class="glyphicon glyphicon-tower" aria-hidden="true"></span> How to Play Adventure Web</h1>
 		<p>Adventure Web is a web based experience where you can explore the amazing world of Aera, a land ful of misteries.</p>
 		<p>In order to explore and survive in this land, you'll need gold. However... how can you obtain gold?</p>
 	</div>
 
 	<!-- Gold System -->
 	<div class="row well">
-		<h2>Gold system</h2>
+		<h2><span class="glyphicon glyphicon-ruble" aria-hidden="true"></span> Gold system</h2>
 		<p>
 		One of the key features of Adventure Web is the gold system. In Aera, nothing is for free. Beers cost money, swrords cost money... hell god even your wife costs money! There are many ways to obtain this mineral, but the basic you need to know is: 
 		<strong>1 second of your time in Aera is 1 coin gold! </strong>
@@ -18,7 +18,7 @@
 	
 	<!-- Exploration -->
 	<div class="row well">
-		<h2>Exploration</h2>
+		<h2><span class="glyphicon glyphicon-tree-conifer" aria-hidden="true"></span> Exploration</h2>
 		<p>
 		Whenever you have enough coins, you can always ask the guards of your city to open the city gates and go and live an adventure! Obviously, the guards don't work for free, so they need to charge you a little fee. 
 		</p>
@@ -26,8 +26,8 @@
 		Once you are exploring the vast lands of Aera, you can encounter one of the following things:
 		<strong>
 			<ul>
-			<li>You can find more gold! Or,</li>
-			<li>You can find valuable objects! Or, </li>
+			<li>You can find more gold!</li>
+			<li>You can find interesting characters </li>
 			<li>You may end up in a trap and loose some money</li>
 			</ul>
 		</strong>
