--- a/src/main/resources/static/templates/about.html
+++ b/src/main/resources/static/templates/about.html
@@ -3,7 +3,7 @@
         <!-- Introduction Row -->
         <div class="row well">
             <div class="col-lg-12">
-                <h1 class="page-header">About Adventure Web
+                <h1 class="page-header"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> About Adventure Web
                     <p><small>Welcome to your adventure!</small></p>
                 </h1>
                 <p>Adventure web is a web based game where you can create your own character and explore different lands in the fantastic world of Aera, a place full with misteries and treasures.</p>
