--- a/src/main/resources/static/templates/home.html
+++ b/src/main/resources/static/templates/home.html
@@ -20,5 +20,5 @@
 
 <div class="well">  
   <h1>Adventure Web</h1>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed diam eget risus varius blandit sit amet non magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Cras mattis consectetur purus sit amet fermentum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Aenean lacinia bibendum nulla sed consectetur.</p>
+  <p>Create your character, live extraordinary adventures, and find incredible treasures! In Adventure Web, everything can happen!</p>
 </div>
